<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/title_account" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_add"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_text_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_text_search" />
</menu>